# time-cap

./: README.md  clean.py  pyproject.toml
src/: time_cap.py
src/time_cap/: __init__.py  time_cap.py
tests/: test_time_cap.py
